--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                                     <li class="sidebar__list-item"><span class="sidebar__item-text">React.js</span></li>
                                     <li class="sidebar__list-item"><span class="sidebar__item-text">Node.js</span></li>
                                     <li class="sidebar__list-item"><span class="sidebar__item-text">GIT</span></li>
+                                    <li class="sidebar__list-item"><span class="sidebar__item-text">GULP</span></li>
                                     <li class="sidebar__list-item"><span class="sidebar__item-text">WebPack</span></li>
                                 </ul>
                             </div>
@@ -117,9 +118,9 @@
                             <h2 class="content__subtitle">Work Experience</h2>
                             <ul class="content__list-ul">
                                 <li class="content__list-item without-disc">
-                                    <h3 class="content__list-title">Front-End Developer <span
-                                            class="content__highlight">Freelance</span></h3>
-                                    <p class="content__list-terms">September 2019 - up to now | Country</p>
+                                    <h3 class="content__list-title">Lawyer <br><span class="content__highlight"> Main
+                                            Department of Tax Service of Ukraine in the Kharkiv region</span></h3>
+                                    <p class="content__list-terms">November 2009 - June 2016 | Ukraine</p>
                                     <ul class="content__list-inner">
                                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
                                         <li>Quis ipsum suspendisse ultrices gravida.</li>
@@ -127,14 +128,25 @@
                                     </ul>
                                 </li>
                                 <li class="content__list-item without-disc">
-                                    <h3 class="content__list-title">Manager <span class="content__highlight">Roga &
-                                            Kopyta New</span></h3>
-                                    <p class="content__list-terms">March 2015 - October 2018 | Country</p>
+                                    <h3 class="content__list-title">Auditor <br><span class="content__highlight"> Main
+                                            Department of Tax Service of Ukraine in the Kharkiv region</span></h3>
+                                    <p class="content__list-terms">June 2016 - up to now | Ukraine</p>
                                     <ul class="content__list-inner">
                                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
                                         <li>Quis ipsum suspendisse ultrices gravida.</li>
                                         <li>Risus commodo viverra maecenas. </li>
                                     </ul>
+                                <li class="content__list-item without-disc">
+                                    <h3 class="content__list-title">SEO Specialist <br><span
+                                            class="content__highlight">School of English "MyEnglishWorld"</span>
+                                        </span></h3>
+                                    <p class="content__list-terms">June 2018 - up to now | Ukraine</p>
+                                    <ul class="content__list-inner">
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+                                        <li>Quis ipsum suspendisse ultrices gravida.</li>
+                                        <li>Risus commodo viverra maecenas. </li>
+                                    </ul>
+                                </li>
                                 </li>
                             </ul>
                         </div>
@@ -143,18 +155,16 @@
                             <h2 class="content__subtitle">Education</h2>
                             <ul class="content__list-ul">
                                 <li class="content__list-item without-disc">
-                                    <h3 class="content__list-title"><span class="content__highlight">National University
-                                            of
-                                            Radioelectronics</span></h3>
-                                    <p class="content__list-descr">Management</p>
-                                    <p class="content__list-terms">September 2009 - June 2014 | Country</p>
+                                    <h3 class="content__list-title"><span class="content__highlight">Yaroslav Mudryi
+                                            National Law University</span></h3>
+                                    <p class="content__list-descr">Jurisprudence</p>
+                                    <p class="content__list-terms">September 2004 - June 2009 | Ukraine</p>
                                 </li>
                                 <li class="content__list-item without-disc">
-                                    <h3 class="content__list-title"><span class="content__highlight">National University
-                                            of
-                                            Radioelectronics</span></h3>
-                                    <p class="content__list-descr">Management</p>
-                                    <p class="content__list-terms">September 2009 - June 2014 | Country</p>
+                                    <h3 class="content__list-title"><span class="content__highlight">V.N.Karazin Kharkiv
+                                            National University</span></h3>
+                                    <p class="content__list-descr">Accounting and taxation</p>
+                                    <p class="content__list-terms">September 2016 - July 2017 | Ukraine</p>
                                 </li>
                             </ul>
                         </div>
